# ZKKD

./: README.md
1_teacher_model_train/: teacher_model_training.py
2_student_model_train/: main.py  model.py  student_output.pkl
3_model_info_extraction/: extract_gradient_descent_data.py  (+5 more)
4_libsnark/src/: CMakeCache.txt  CMakeLists.txt  Makefile  SDT.cpp  cmake_install.cmake  gradient_descent.cpp  readme  teacher_model_checkpoint.cpp  teacher_model_whole_1.cpp  teacher_model_whole_2.cpp  teacher_model_whole_3.cpp
4_libsnark/src/depends/: Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/depends/: CTestTestfile.cmake  Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/depends/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/depends/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/depends/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/depends/libff/: CTestTestfile.cmake  Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/depends/libff/libff/: CTestTestfile.cmake  Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/depends/libfqfft/: CTestTestfile.cmake  Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/depends/libfqfft/tutorials/: CTestTestfile.cmake  Makefile  cmake_install.cmake
4_libsnark/src/depends/libsnark/libsnark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+5 files in other folders)
